# nqcc2

./: .gitignore  .ocamlformat  README.md  dune-project  nqcc.opam
.github/: run_tests.py
.github/workflows/: build.yaml  build_and_test.yaml  test_each_chapter.yaml
lib/: assembly.ml  ast.ml  backward_dataflow.ml  backward_dataflow.mli  cfg.ml  cfg.mli  codegen.ml  codegen.mli  compile.ml  compile.mli  const.ml  const_convert.ml  const_convert.mli  context.ml  dune  emit.ml  emit.mli  initializers.ml  initializers.mli  lex.ml  lex.mli  parse.ml  parse.mli  reg_set.ml  settings.ml  settings.mli  string_map.mli  symbols.ml  symbols.mli  tacky.ml  tacky_gen.ml  tacky_gen.mli  tacky_print.ml  tok_stream.ml  tok_stream.mli  tokens.ml  type_table.ml  type_table.mli  types.ml  unique_ids.ml  (+1 more)
lib/backend/: assembly_symbols.ml  assembly_symbols.mli  codegen.ml  codegen.mli  instruction_fixup.ml  instruction_fixup.mli  regalloc.ml  regalloc.mli  replace_pseudos.ml  replace_pseudos.mli
lib/optimizations/: address_taken.ml  address_taken.mli  constant_folding.ml  constant_folding.mli  copy_prop.ml  copy_prop.mli  dead_store_elim.ml  dead_store_elim.mli  optimize.ml  optimize.mli  optimize_utils.ml  optimize_utils.mli  unreachable_code_elim.ml  unreachable_code_elim.mli
lib/semantic_analysis/: collect_switch_cases.ml  collect_switch_cases.mli  identifier_resolution.ml  identifier_resolution.ml.orig  identifier_resolution.mli  label_loops.ml  label_loops.mli  resolve.ml  typecheck.ml  typecheck.mli  validate_labels.ml  validate_labels.mli  var_resolution.ml
lib/util/: cnums.ml  cnums.mli  debug.ml  disjoint_sets.ml  disjoint_sets.mli  extended_big_int.ml  extended_big_int.mli  int8.ml  int8.mli  num_interfaces.ml  rounding.ml  rounding.mli  string_utils.ml  string_utils.mli  type_utils.ml  type_utils.mli  unique_ids.mli  utils.ml  utils.mli
test/: dune  test_constant_folding.ml  test_convert.ml  test_int8.ml  test_lex.ml  test_parse.ml  test_util.ml
