(include_subdirs unqualified)

(library
 (name nqcc)
 (inline_tests)
 (modules
  address_taken
  ast
  assembly
  assembly_symbols
  backward_dataflow
  cfg
  cnums
  codegen
  compile
  const
  const_convert
  constant_folding
  copy_prop
  dead_store_elim
  disjoint_sets
  emit
  extended_big_int
  optimize_utils
  identifier_resolution
  initializers
  instruction_fixup
  label_loops
  lex
  num_interfaces
  optimize
  parse
  regalloc
  replace_pseudos
  rounding
  symbols
  tacky
  tacky_gen
  tacky_print
  tokens
  type_table
  type_utils
  typecheck
  types
  type_utils
  settings
  unique_ids
  unreachable_code_elim)
 (libraries batteries ppx_deriving ppx_inline_test camlp-streams bisect_ppx)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_inline_test))
 (instrumentation
  (backend bisect_ppx)))
