(include_subdirs unqualified)

(library
 (name nqcc)
 (modules
  ast
  assembly
  codegen
  compile
  emit
  instruction_fixup
  label_loops
  lex
  parse
  replace_pseudos
  tacky
  tacky_gen
  tacky_print
  tokens
  settings
  unique_ids
  validate_labels
  var_resolution)
 (libraries batteries ppx_deriving ppx_inline_test camlp-streams)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))
